# qwen-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: documentation.md  usage_documentation.md
examples/: README.md  async_usage.py  async_usage_stream.py  basic_usage.py  basic_usage_stream.py  error_handling.py  streaming_example.py
examples/qwen_llama_index/RAG/: milvus.py
examples/qwen_llama_index/chat/: async_chat.py  async_chat_stream.py  chat.py  chat_stream.py
examples/qwen_llama_index/complete/: async_complete.py  async_complete_stream.py  complete.py  complete_stream.py
qwen_api/: pyproject.toml
qwen_api/examples/: async_usage.py  basic_usage.py  basic_usage_stream.py  cancel_usage.py  interrupt_handling.py  tool_call_full_data.py  tool_call_full_data_async.py  tool_calling.py  tool_calling_async.py
qwen_api/examples/cencel/: cancel_usage.py  comprehensive_cancel_test.py
qwen_api/examples/chat/: basic_chat_async.py  basic_chat_async_stream.py  basic_chat_stream.py  basic_chat_sync.py
qwen_api/examples/image/: async_usage_stream.py  upload_image.py
qwen_api/examples/tools/: async_usage.py  basic_usage.py  basic_usage_stream.py  tools_async.py  tools_sync.py
qwen_api/qwen_api/: client.py
qwen_api/qwen_api/resources/: completions.py  tool_handle.py
qwen_api/qwen_api/utils/: tool_prompt.py
qwen_llamaindex/examples/RAG/: milvus.py
qwen_llamaindex/examples/chat/: async_chat.py  async_chat_stream.py  (+2 more)
qwen_llamaindex/qwen_llamaindex/: base.py
scripts/: detect_changed.py
(+7 files in other folders)
