[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-workspace"
version = "0.1.0"
authors = [
  { name="Ahmad Rosyihuddin", email="rosyihuddin.dev@gmail.com" },
]
description = "Unofficial Qwen API Client"

[tool.poetry.workspaces]
members = [
  "qwen_api",
  "qwen_llamaindex"
]